# AIDS-USTC

./: .gitmodules  README.md
Courses/Cognition Science/: review.md
Courses/Intro to Algorithms/labs/: CMakeLists.txt  POMO.ipynb  labs.ipynb  utils.py
Courses/Intro to Algorithms/labs/configs/: DEBUG.toml
Courses/Intro to Algorithms/labs/docs/: lab1.md  lab2.md  lab3.md
Courses/Intro to Algorithms/labs/src/: lab1_main1.cpp  lab1_main2.cpp  lab1_test1.cpp  lab1_test2.cpp  lab2_main.cpp  lab2_test.cpp  linked_list.hpp  sort.hpp  trees.hpp  utils.hpp
Courses/Intro to Algorithms/labs/src/knapsack/: backtracking.cpp  branch_and_bound.cpp  divide_and_conquer.cpp  dynamic_programming.cpp  greedy.cpp  monte_carlo.cpp
Courses/Intro to Algorithms/labs/src/trees/: avl_tree.hpp  b_plus_tree.hpp  b_tree.hpp  base.hpp  binary_search_tree.hpp  red_black_tree.hpp
Courses/Intro to Computer Systems/: CMakeLists.txt
Courses/Intro to Computer Systems/reports/lab1/verl/: lab1l.txt
Courses/Intro to Computer Systems/reports/lab1/verp/: lab1p.txt
Courses/Intro to Computer Systems/reports/lab2/: fib.txt
Courses/Intro to Computer Systems/reports/lab3/: foo.txt  id.txt  translate.txt
Courses/Intro to Computer Systems/reports/lab4/: mod.txt  recur.txt
Courses/Intro to Computer Systems/reports/lab6/: lab6.cpp
Courses/Intro to Computer Systems/rs/lab1/: lab1.md  lab1l.asm  lab1l0.asm  lab1p.asm  lab1p0.asm
Courses/Intro to Computer Systems/rs/lab2/: fib.asm  fib1.asm  lab2.md
Courses/Intro to Computer Systems/rs/lab3/: fib.asm  fib.out  lab3.md  stats.txt
Courses/Intro to Computer Systems/rs/lab4/: lab4.md
Courses/Intro to Computer Systems/rs/lab4/attachment/: task2.txt
Courses/Intro to Computer Systems/rs/lab4/task1/: output.txt  task1.txt
Courses/Intro to Computer Systems/rs/lab4/task2/: mod.txt  task2.txt
Courses/Intro to Computer Systems/rs/lab5/: lab5.md
Courses/Intro to Computer Systems/rs/lab6/: lab6.md
Courses/Intro to Computer Systems/rs/lab_a/: allInstruction.asm  binaryToAscii.asm  call.asm  expect_label.asm  expect_label_range.asm  expect_range.asm  expect_sgnatx.asm  readme.md  test.cpp
Courses/Intro to Computer Systems/rs/lab_a/LAB_A_Attachment/: Makefile  assembler.cpp  assembler.h  main.cpp  test1.asm  test2.asm  test5.asm
Courses/Intro to Computer Systems/rs/lab_s/: CMakeLists.txt
Courses/Intro to Computer Systems/rs/lab_s/include/: common.h  memory.h  register.h  simulator.h
Courses/Intro to Computer Systems/src/: CMakeLists.txt  lab1.cpp  lab2.cpp  lab3_decoder.cpp  lab3_disassembler.cpp  lab3_stats.ps1  lab3_tester.cpp  lab4_task1.cpp  lab4_task2.cpp  lab5.cpp
Courses/Intro to Computer Systems/src/backend/: CMakeLists.txt  aliases.h  asm_types.cpp  asm_types.h  assembler.cpp  assembler.h  callback.cpp  callback.h  converter.cpp  converter.h  decoder.cpp  decoder.h  device.cpp  device.h  device_regs.h  encoder.cpp  encoder.h  event.cpp  event.h  func_type.cpp  func_type.h  inputter.h  interface.cpp  interface.h  intex.cpp  intex.h  isa.h  isa_abstract.cpp  isa_abstract.h  isa_encoding.cpp  isa_impl.cpp  lc3os.cpp  lc3os.h  logger.h  mem.cpp  mem.h  paths.h  printer.h  simulator.cpp  simulator.h  (+8 more)
Courses/Intro to Computer Systems/src/common/: CMakeLists.txt  common.cpp  common.h  console_inputter.cpp  console_inputter.h  console_printer.cpp  console_printer.h
Courses/Multimedia/exp/sdl_ffmpeg/: CMakeLists.txt  SDL_ffmpeg_player.cpp  test_ffmpeg.cpp  test_sdl.cpp
(+910 files in other folders)
